Fix modal on mobiles

--- a/css/gifts.css
+++ b/css/gifts.css
@@ -127,6 +127,9 @@ h1 {
   padding: 0;
   background-color: #ecf3f8;
   z-index: 1002;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 dialog::backdrop {
@@ -196,13 +199,8 @@ dialog::backdrop {
 
 .modal-open {
   overflow: hidden;
-  position: relative;
-  height: 100%;
-}
-
-html.modal-open {
-  overflow: hidden;
-  height: 100%;
+  width: 100%;
+  inset: 0;
 }
 
 @media (width >= 768px) and (width < 1440px ) {
